--- a/portfolio/bootstrap site/src/style/style.scss
+++ b/portfolio/bootstrap site/src/style/style.scss
@@ -311,9 +311,9 @@ header {
   }
   .menu__item {
     display: block;
-    width: 30px;
-    height: 26px;
-    background: url('../img/menu__icon.jpg');
+    width: 37px;
+    height: 37px;
+    background: url('../img/menu__icon.png');
     margin: 40px 10px 0 0;
     color: $white;
     float: right;
