--- a/portfolio/ecuador/src/style/style.scss
+++ b/portfolio/ecuador/src/style/style.scss
@@ -40,12 +40,13 @@ header {
     position: fixed;
     top:0;
     left:0;
-    z-index: 1;
+    z-index: 1000;
     width: 100%;
-    background: rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0, 0.3);
 
 
   .header__logo {
+    display: block;
     margin-top: 28px;
     width: 124px;
     height: 100px;
@@ -107,8 +108,8 @@ header {
       transition: 2s;
     }
     .left:hover {
-      background-color: #aaa;
-      border: 2px solid #aaa;
+      background-color: #ed1f24;
+      border: 2px solid #ed1f24;
     }
     .right {
       width: 242px;
@@ -116,8 +117,8 @@ header {
       background: rgba(0, 0, 0, 0);
     }
     .right:hover {
-      background-color: #aaa;
-      border: 2px solid #aaa;
+      background-color: #ed1f24;
+      border: 2px solid #ed1f24;
     }
 
 }
@@ -133,7 +134,7 @@ header {
   }
 
   .phone__info {
-      margin: 84px 0 0 112px;
+      margin: 84px 0 0 80px;
     .block1__h2--top {
       margin-bottom: 10px;
     }
@@ -156,7 +157,7 @@ header {
     }
     span {
       display: block;
-      max-width: 500px;
+      max-width: 100%;
       font-size: 14px;
       // line-height: 1.3;
       color: #757575;
@@ -165,85 +166,157 @@ header {
   }
 }
 
-.block2 {
 
-  .box__left {
-    background: url('../img/box__left.jpg');
-    height: 509px;
-      .box__left--first {
-        height: 260px;
-        background: url('../img/box__left1.jpg') 100%;
-        padding-right: 35px;
-        line-height: 260px;
-        text-transform: uppercase;
-        text-align: right;
-        font-size: 45px;
-        font-weight: bold;
-        color: $white;
-      }
-      .box__left--second {
-        background: url('../img/box__left2.jpg') 1%;
-        line-height: 260px;
-        padding-right: 35px;
-        text-transform: uppercase;
-        height: 260px;
-        text-align: right;
-        font-size: 45px;
-        font-weight: bold;
-        color: $white;
-      }
-      .box__left--bottom {
-        background: #535353;
-        height: 248px;
-        blockquote {
-          max-width: 450px;
-            font-size: 23px;
-            color: $white;
-            text-align: left;
-            padding: 10px 10px 10px 40px;
-        }
-      }
 
+
+.svg-block-1 {
+  width: 100%;
+  height: 500px;
+  background: #fff;
+  position: relative;
+}
+
+.clip_1 {
+  width: 50%;
+  height: 50%;
+  -webkit-clip-path: polygon(0 0, 88% 0%, 82% 100%, 0% 100%);
+  background: red;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  .clip_left {
+    float: left;
+    width: 47%;
+    height: 100%;
+    background: url('../img/box__left1.jpg');
+    text-align: center;
+    p {
+      margin: 0 auto;
+      line-height: 6;
+      color: $white;
+      font-size: 45px;
+    }
   }
-  .box__right {
-    background: url('../img/box__right.jpg') 85%;
-    height: 509px;
-    .box__right--top {
-      background: #3a3737;
-      height: 248px;
-      blockquote {
-        max-width: 450px;
-          font-size: 23px;
-          color: $white;
-          text-align: left;
-          padding: 10px 10px 10px 40px;
-      }
-    }
-    .box__right--first {
-        height: 260px;
-        background: url('../img/box__right1.jpg') 100%;
-        padding-right: 35px;
-        line-height: 260px;
-        text-transform: uppercase;
-        text-align: right;
-        font-size: 45px;
-        font-weight: bold;
-        color: $white;
-    }
-    .box__right--second {
-        height: 260px;
-        background: url('../img/box__right2.jpg');
-        padding-right: 35px;
-        line-height: 260px;
-        text-transform: uppercase;
-        text-align: right;
-        font-size: 45px;
-        font-weight: bold;
-        color: $white;
+  .clip_right {
+    float: left;
+    width: 53%;
+    height: 100%;
+    background: url('../img/box__left2.png') 10%;
+    text-align: center;
+    p {
+      padding-right: 180px;
+      line-height: 6;
+      color: $white;
+      font-size: 45px;
     }
   }
 }
 
+.clip_2 {
+  width: 50%;
+  height: 50%;
+  -webkit-clip-path: polygon(0% 0%, 82% 0%, 78% 100%, 0% 100%);
+  background: #535353;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: left;
+  p {
+    margin-left: 100px;
+    width: 49%;
+    color: $white;
+    font-size: 23px;
+  }
+}
+
+.clip_3 {
+  width: 65%;
+  height: 50%;
+  -webkit-clip-path: polygon(31% 0%, 100% 0%, 100% 100%, 24% 100%);
+  background: #3a3737;
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: right;
+  p {
+    margin-left: 300px;
+    width: 49%;
+    color: $white;
+    font-size: 23px;
+  }
+}
+
+.clip_4 {
+  width: 50%;
+  height: 50%;
+  -webkit-clip-path: polygon(26% -5%, 100% 0%, 100% 100%, 19% 100%);
+  background: green;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  .clip_left {
+    float: left;
+    width: 57%;
+    height: 100%;
+    background: url('../img/box__right1.jpg') 100% 55%;
+    text-align: center;
+    p {
+      padding-left: 180px;
+      line-height: 6;
+      color: $white;
+      font-size: 45px;
+    }
+  }
+  .clip_right {
+    float: left;
+    width: 43%;
+    height: 100%;
+    background: url('../img/box__right2.jpg') 10%;
+    text-align: center;
+    p {
+      margin: 0 auto;
+      line-height: 6;
+      color: $white;
+      font-size: 45px;
+    }
+  }
+}
+
+.clip_1, .clip_2, .clip_3, .clip_4 {
+  width: 64%;
+}
+
+@-webkit-keyframes right {
+  from {
+    right: 0;
+  }
+
+  50% {
+    right: 19%;
+    background: #ccc;
+  }
+
+  to {
+    right: 0;
+  }
+}
+
+
+@-webkit-keyframes left {
+  from {
+    left: 0;
+  }
+
+  50% {
+    left: 19%;
+    background: #ccc;
+  }
+
+  to {
+    left: 0;
+  }
+}
 .products {
   padding-top: 186px;
   .products__box {
@@ -360,7 +433,7 @@ header {
       left: 32%;
       z-index: 10;
       width: 324px;
-      min-height: 434px;
+      min-height: 464px;
         .plan__price {
           background: #ed1f24;
           padding-bottom: 5px;
@@ -382,7 +455,7 @@ header {
       text-align: right;
         float: right;
     p {
-      max-width: 320px;
+      max-width: 100%;
       font-size: 52px;
       color: $white;
     }
@@ -407,7 +480,7 @@ header {
     .contacts_address {
       padding: 30px 0;
       p {
-        max-width: 400px;
+        max-width: 100%;
         font-size: 29px;
         color: $white;
       }
@@ -459,8 +532,120 @@ header {
 }
 
 footer {
-  
+  background: #303030;
+  height: 152px;
+  .footer__logo {
+    margin: 50px 0 0 40px;
+    width: 78px;
+    height: 59px;
+    background: url('../img/footer__logo.jpg');
+  }
+  .footer__copy {
+    margin: 66px 0 0 65px;
+    font-size: 15px;
+    color: $white;
+  }
+  .footer__menu {
+      margin: 66px 0 0 65px;
+
+    li {
+      float: left;
+      a {
+        font-size: 16px;
+        color: $white;
+        padding: 0 8px;
+        margin: 0 8px;
+      }
+    }
+    li:first-child {
+      padding-left: 100px;
+    }
+  }
+  .facebook {
+    margin: 50px 0 0 18px;
+    display: block;
+    width: 56px;
+    height: 56px;
+    background: url('../img/facebook.jpg');
+  }
 }
 
 
 }//container-fluid
+
+@media (min-width: 1200px) {
+.container-fluid {
+
+  header {
+    .header__fixed {
+      .menu {
+
+      .list-item {
+        a {
+          margin: 0 10px;
+        }
+      }
+    }
+    }
+}
+footer {
+  .footer__menu {
+    li {
+    a {
+      margin: 0 2px;
+    }
+
+    }
+  }
+}
+}
+}
+
+@media (min-width: 992px) {
+.container-fluid {
+
+  header {
+    .header__fixed {
+      .menu {
+
+      .list-item {
+        a {
+          margin: 0 5px;
+        }
+      }
+    }
+    }
+}
+
+.block1 {
+  .phone__info {
+    margin: 84px 0 0 50px;
+  }
+}
+
+.price {
+  .plans {
+    .plan__center {
+    }
+    .plan {
+      .plan__descr {
+        padding: 47px 6px 12px 0px;
+      }
+    }
+  }
+}
+.contacts {
+  height: auto;
+}
+footer {
+  .footer__menu {
+    li {
+    a {
+      margin: 0 2px;
+    }
+
+    }
+  }
+}
+}
+}
