--- a/portfolio/ecuador/src/style/style.scss
+++ b/portfolio/ecuador/src/style/style.scss
@@ -34,6 +34,7 @@ header {
   padding: 0 20px 0 43px;
   position: relative;
   background: url('../img/header__bg.jpg') 58% 0;
+  max-width: 100%;
   .header__fixed {
     height: auto;
     padding-left: 30px;
@@ -42,7 +43,7 @@ header {
     left:0;
     z-index: 1000;
     width: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    // background: rgba(0, 0, 0, 0.3);
 
 
   .header__logo {
@@ -126,21 +127,24 @@ header {
 
 .block1 {
   margin-top: 44px;
+  text-align: center;
   .phone__img {
     margin-left: 10px;
-    background: url('../img/phone.jpg');
-    width: 578px;
+    background: url('../img/phone.jpg') no-repeat;
+    background-size: contain;
     height: 731px;
   }
 
   .phone__info {
-      margin: 84px 0 0 80px;
+      margin: 84px 0 0 0;
     .block1__h2--top {
+      width: 100%;
       margin-bottom: 10px;
     }
     .block1__h2 {
       font-size: 44px;
-      max-width: 450px;
+      width: 100%;
+      max-width: 100%;
       font-weight: 100;
       line-height: 1.2;
       text-align: center;
@@ -335,7 +339,7 @@ header {
       padding-left: 54px;
       text-align: center;
         .product__desr {
-          padding: 0 20px;
+          padding: 20px;
           h3 {
             font-size: 20px;
             color: #151515;
@@ -357,13 +361,16 @@ header {
 }
 .product__img {
   background: url('../img/product__img.jpg');
+  max-width: 100%;
   height: 463px;
-  margin-left: 40px;
+  background-size:cover;
+-moz-background-size:cover;
+-webkit-background-size:cover;
 }
 }
 
 .price {
-  padding: 60px 0 90px 0;
+  padding: 72px 0 56px 0;
   background: #f5f5f5;
   h2 {
     font-size: 46px;
@@ -376,6 +383,7 @@ header {
     position: relative;
     .plan {
       padding: 0 0 50px 0;
+      border-radius: 4px;
       background: #f5f5f5;
       border: 1px solid #c9c9c9;
       text-align: center;
@@ -410,7 +418,7 @@ header {
             }
         }
         .plan__descr {
-          padding: 47px 36px 12px 0px;
+          padding: 47px 28px 13px 36px;
           font-size: 18px;
           color: #585858;
         }
@@ -430,9 +438,9 @@ header {
     .plan__center {
       position: absolute;
       top: 7%;
-      left: 32%;
+      left: 33%;
       z-index: 10;
-      width: 324px;
+      width: 34%;
       min-height: 464px;
         .plan__price {
           background: #ed1f24;
@@ -447,7 +455,10 @@ header {
   background: #3c3c3c;
   height: 395px;
   .contacts__img {
-    background: url('../img/contacts__phone.jpg');
+    background: url('../img/contacts__phone.jpg') no-repeat;
+    background-size: cover;
+    background-size: 100% 101%;
+    max-width: 100%;
     height: 394px;
     .contacts__button {
       padding-top: 20px;
@@ -486,9 +497,11 @@ header {
       }
     }
     form {
+
+
       .form__left {
         float: left;
-        width: 200px;
+        width: 47%;
         input {
           width: 185px;
           height: 34px;
@@ -501,6 +514,7 @@ header {
         }
       }
       .form__right {
+        width: 50%;
         float: left;
         textarea {
           float: left;
@@ -517,7 +531,7 @@ header {
       }
       input[type="submit"] {
         float:right;
-        margin-right: 70px;
+        margin-right: 62px;
         width: 86px;
         height: 28px;
         background: none;
@@ -533,7 +547,7 @@ header {
 
 footer {
   background: #303030;
-  height: 152px;
+  min-height: 152px;
   .footer__logo {
     margin: 50px 0 0 40px;
     width: 78px;
@@ -572,80 +586,359 @@ footer {
 
 
 }//container-fluid
+@media (min-width: 1200px) and (max-width: 1400px) {
+  .container-fluid {
 
-@media (min-width: 1200px) {
-.container-fluid {
+    header {
+      .header__fixed {
+        .menu {
 
-  header {
-    .header__fixed {
-      .menu {
-
-      .list-item {
-        a {
-          margin: 0 10px;
+          .list-item {
+            a {
+              margin: 0 11px;
+            }
+          }
         }
       }
     }
-    }
-}
-footer {
-  .footer__menu {
-    li {
-    a {
-      margin: 0 2px;
-    }
+    .price {
+      .plans {
+        .plan__center {
+          min-height: 494px;
 
-    }
-  }
-}
-}
-}
-
-@media (min-width: 992px) {
-.container-fluid {
-
-  header {
-    .header__fixed {
-      .menu {
-
-      .list-item {
-        a {
-          margin: 0 5px;
+        }
+        .plan {
+          .plan__descr {
+            padding: 47px 28px 13px 46px;
+          }
         }
       }
     }
+    .contacts {
+      .contacts__form {
+        form {
+          input[type="submit"] {
+            margin-right: 62px;
+          }
+        }
+      }
     }
-}
+    footer {
+      .footer__menu {
+        li {
+          a {
+            margin: 0 2px;
+          }
 
-.block1 {
-  .phone__info {
-    margin: 84px 0 0 50px;
-  }
-}
-
-.price {
-  .plans {
-    .plan__center {
-    }
-    .plan {
-      .plan__descr {
-        padding: 47px 6px 12px 0px;
+        }
+      }
+      .footer__copy {
+        margin: 66px 0 0 50px;
       }
     }
   }
 }
-.contacts {
-  height: auto;
-}
-footer {
-  .footer__menu {
-    li {
-    a {
-      margin: 0 2px;
+@media (min-width: 992px) and (max-width: 1199px){
+  .container-fluid {
+
+    header {
+      .header__fixed {
+        .menu {
+
+          .list-item {
+            a {
+              margin: 0 5px;
+            }
+          }
+        }
+      }
     }
 
+    .block1 {
+      .phone__info {
+        width: 48%;
+      }
+
+    }
+    .price {
+      .plans {
+        .plan__center {
+        }
+        .plan {
+          .plan__descr {
+            padding: 47px 6px 12px 0px;
+          }
+        }
+      }
+    }
+    .contacts {
+      height: auto;
+      .contacts__img {
+        .contacts__button {
+          p {
+            font-size: 35px;
+          }
+        }
+      }
+      .contacts__form {
+        .contacts_address {
+
+        }
+        form {
+          .form__left {
+            width: 47%;
+            input {
+              width: 142px;
+              height: 34px;
+            }
+          }
+          .form__right {
+            width: 50%;
+            textarea {
+              width: 161px;
+              height: 122px;
+            }
+          }
+          input[type="submit"] {
+            margin-right: 6px;
+          }
+        }
+      }
+    }
+    footer {
+      .footer__menu {
+        margin: 66px 0 0 -50px;
+        li {
+          a {
+            margin: 0 2px;
+          }
+
+        }
+      }
     }
   }
 }
+@media (min-width: 768px) and (max-width: 991px) {
+  .container-fluid {
+
+    header {
+      .header__fixed {
+        position: relative;
+        width: 94%;
+        .menu {
+            text-align: right;
+          .list-item {
+            a {
+            }
+          }
+        }
+      }
+    .header__box {
+        .header__box--top,
+        .header__box--center {
+        font-size: 40px;
+      }
+    }
+  }
+
+    .block1 {
+      .phone__img {
+        // width: 50%;
+      }
+      .phone__info {
+        // width:
+        margin: 84px 0 0 50px;
+      }
+    }
+
+    .price {
+      .plans {
+        .plan__center {
+          position: relative;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 33%;
+        }
+        .plan {
+          .plan__descr {
+            padding: 47px 6px 12px 0px;
+          }
+        }
+      }
+    }
+    .contacts {
+      height: auto;
+      padding-bottom: 20px;
+      .contacts__img {
+        .contacts__button {
+          p {
+            font-size: 32px;
+          }
+          a {
+            width: 122px;
+            font-size: 14px;
+          }
+        }
+      }
+      .contacts__form {
+        .contacts_address {
+          p {
+            font-size: 17px;
+          }
+        }
+          form {
+            .form__left {
+              float: none;
+            }
+            .form__right {
+              float: none;
+              textarea {
+                width: 184px;
+              }
+            }
+          }
+      }
+    }
+    footer {
+      .footer__menu {
+        margin: 66px 0 0 18px;
+        li {
+          a {
+            padding: 0 4px;
+            margin: 0 1px;
+          }
+
+        }
+        li:first-child {
+            padding-left: 0px;
+      }
+    }
+    .facebook {
+      margin: 50px 0 0 8px;
+    }
+  }
+  }
 }
+@media (min-width:600px) and (max-width: 767px){
+  .container-fluid {
+
+    header {
+      .header__fixed {
+        position: relative;
+
+        .menu {
+          .list-item {
+            a {
+              margin: 0 6px;
+            }
+          }
+        }
+      }
+    .header__box {
+        .header__box--top,
+        .header__box--center {
+        font-size: 40px;
+      }
+    }
+  }
+
+    .block1 {
+      .phone__img {
+        // width: 50%;
+      }
+      .phone__info {
+        // width:
+        margin: 84px 0 0 50px;
+      }
+    }
+
+    .products {
+      .products__box {
+        .product__desription {
+          .product__desr {
+            margin-bottom: 40px;
+          }
+        }
+      }
+    }
+
+    .price {
+      .plans {
+        .plan__center {
+          position: relative;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+        .plan {
+          .plan__descr {
+            padding: 47px 6px 12px 0px;
+          }
+        }
+      }
+    }
+    .contacts {
+      height: auto;
+      padding-bottom: 20px;
+      .contacts__img {
+        .contacts__button {
+          p {
+            font-size: 32px;
+          }
+          a {
+            width: 122px;
+            font-size: 14px;
+          }
+        }
+      }
+      .contacts__form {
+        margin-left: 30px;
+        .contacts_address {
+          padding: 18px 0;
+          p {
+            font-size: 17px;
+          }
+        }
+          form {
+            .form__left {
+              float: left;
+            }
+            .form__right {
+              float: left;
+              textarea {
+                width: 184px;
+              }
+            }
+            input[type="submit"] {
+              margin-right: 108px;
+            }
+          }
+      }
+    }
+    footer {
+      .flogo {
+          width: 30%;
+          float: left;
+      }
+      .fcopy {
+          width: 70%;
+          float: left;
+      }
+      .footer__menu {
+        display: none;
+    }
+    .facebook {
+      display: none;
+    }
+  }
+  }
+}
+@media (min-width:320px) and (max-width: 599px){
+    .container-fluid {
+      header {
+        
+      }
+    }
 }
