--- a/portfolio/ecuador/src/style/style.scss
+++ b/portfolio/ecuador/src/style/style.scss
@@ -184,7 +184,6 @@ header {
   width: 50%;
   height: 50%;
   -webkit-clip-path: polygon(0 0, 88% 0%, 82% 100%, 0% 100%);
-  background: red;
   position: absolute;
   top: 0;
   left: 0;
@@ -193,26 +192,28 @@ header {
     float: left;
     width: 47%;
     height: 100%;
-    background: url('../img/box__left1.jpg');
+    background: url('../img/box__left1.jpg') 100% no-repeat;
     text-align: center;
     p {
-      margin: 0 auto;
+      margin-right: 42%;
       line-height: 6;
       color: $white;
       font-size: 45px;
+      font-weight: bold;
     }
   }
   .clip_right {
     float: left;
     width: 53%;
     height: 100%;
-    background: url('../img/box__left2.png') 10%;
+    background: url('../img/box__left2.png') 1% no-repeat;
     text-align: center;
     p {
-      padding-right: 180px;
+      margin-right: 25%;
       line-height: 6;
       color: $white;
       font-size: 45px;
+      font-weight: bold;
     }
   }
 }
@@ -226,12 +227,26 @@ header {
   bottom: 0;
   left: 0;
   text-align: left;
-  p {
-    margin-left: 100px;
+  .clip__box {
+
+    display: block;
+    max-width: 50%;
+    padding: 2% 0% 0% 3%;
+    margin: 3% 0 0 1%;
     width: 49%;
+  span {
     color: $white;
     font-size: 23px;
   }
+  cite {
+    display: block;
+    margin-top: 10px;
+    color: $white;
+  }
+  .cite__bottom {
+    margin: 0;
+  }
+}
 }
 
 .clip_3 {
@@ -243,19 +258,32 @@ header {
   top: 0;
   right: 0;
   text-align: right;
-  p {
-    margin-left: 300px;
+  .clip__box {
+    display: block;
+    max-width: 50%;
+    padding: 2% 0% 0% 3%;
+    margin: 3% 0 0 46%;
     width: 49%;
-    color: $white;
-    font-size: 23px;
-  }
+
+    span {
+      color: $white;
+      font-size: 23px;
+    }
+    cite {
+      display: block;
+      margin-top: 10px;
+      color: $white;
+    }
+    .cite__bottom {
+      margin: 0;
+    }
+}
 }
 
 .clip_4 {
   width: 50%;
   height: 50%;
   -webkit-clip-path: polygon(26% -5%, 100% 0%, 100% 100%, 19% 100%);
-  background: green;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -263,26 +291,29 @@ header {
     float: left;
     width: 57%;
     height: 100%;
-    background: url('../img/box__right1.jpg') 100% 55%;
+    background: url('../img/box__right1.jpg') 100% 55%  no-repeat;
     text-align: center;
     p {
-      padding-left: 180px;
+      margin-left: 36%;
       line-height: 6;
       color: $white;
       font-size: 45px;
+      font-weight: bold;
     }
   }
   .clip_right {
     float: left;
     width: 43%;
     height: 100%;
-    background: url('../img/box__right2.jpg') 10%;
+    background: url('../img/box__right2.jpg') 10% no-repeat;
+
     text-align: center;
     p {
-      margin: 0 auto;
+      margin-left: 29%;
       line-height: 6;
       color: $white;
       font-size: 45px;
+      font-weight: bold;
     }
   }
 }
@@ -660,6 +691,55 @@ footer {
       }
 
     }
+    .svg-block-1 {
+      .clip_1 {
+          .clip_left {
+              p {
+                font-size: 38px;
+                margin-right: 30%;
+              }
+          }
+          .clip_right {
+              p {
+                font-size: 38px;
+              }
+          }
+      }
+      .clip_2 {
+        .clip__box {
+          width: 53%;
+          span {
+
+          }
+          cite {
+
+          }
+        }
+      }
+      .clip_3 {
+        .clip__box {
+          width: 53%;
+          span {
+
+          }
+          cite {
+
+          }
+        }
+      }
+      .clip_4 {
+        .clip_left {
+            p {
+              font-size: 38px;
+            }
+        }
+        .clip_right {
+            p {
+              font-size: 38px;
+            }
+        }
+      }
+    }
     .price {
       .plans {
         .plan__center {
@@ -743,14 +823,79 @@ footer {
 
     .block1 {
       .phone__img {
-        // width: 50%;
+        margin-left: 10%;
       }
       .phone__info {
         // width:
         margin: 84px 0 0 50px;
+        .block1__item {
+          text-align: center;
+        }
+        span {
+          text-align: center;
+          margin-bottom: 20px;
+        }
       }
     }
+    .svg-block-1 {
+      .clip_1 {
+          .clip_left {
+              p {
+                font-size: 32px;
+                margin-right: 24%;
+              }
+          }
+          .clip_right {
+              p {
+                font-size: 32px;
+              }
+          }
+      }
+      .clip_2 {
+        .clip__box {
+          width: 53%;
+          span {
+            font-size: 18px;
+          }
+          cite {
 
+          }
+        }
+      }
+      .clip_3 {
+        .clip__box {
+          width: 53%;
+          span {
+            font-size: 18px;
+          }
+          cite {
+
+          }
+        }
+      }
+      .clip_4 {
+        .clip_left {
+            p {
+              margin-left: 40%;
+              font-size: 32px;
+            }
+        }
+        .clip_right {
+            p {
+              margin: 0;
+              font-size: 32px;
+            }
+        }
+      }
+    }
+    .products {
+      .products__box {
+        padding-bottom: 20px;
+      }
+      .product__img {
+        margin-bottom: 30px;
+      }
+    }
     .price {
       .plans {
         .plan__center {
@@ -844,20 +989,37 @@ footer {
   }
 
     .block1 {
-      .phone__img {
-        // width: 50%;
+    padding-bottom: 20px;
+    .phone__img {
+      margin-left: 2%;
+    }
+    .phone__info {
+      // width:
+      margin: 84px 0 0 50px;
+      .block1__item {
+        text-align: center;
       }
-      .phone__info {
-        // width:
-        margin: 84px 0 0 50px;
+      span {
+        text-align: center;
+        margin-bottom: 20px;
+        width: 64%;
+        margin: 0 auto;
       }
     }
+  }
+    .svg-block-1 {
+        display: none;
+    }
+
 
     .products {
       .products__box {
         .product__desription {
           .product__desr {
             margin-bottom: 40px;
+          }
+          .product__desr--left {
+            padding-right: 20px;
           }
         }
       }
@@ -936,9 +1098,146 @@ footer {
   }
 }
 @media (min-width:320px) and (max-width: 599px){
-    .container-fluid {
-      header {
-        
+  .container-fluid {
+
+    header {
+      .header__fixed {
+        position: relative;
+          .header__logo {
+              position: absolute;
+              top: -10px;
+              left: -60px;
+          }
+        .menu {
+          display: none;
+        }
+      }
+    .header__box {
+        .header__box--top,
+        .header__box--center {
+        font-size: 30px;
+      }
+        .header__button {
+          margin: 30px 0 0px 0;
+        }
+    }
+  }
+
+    .block1 {
+    padding-bottom: 20px;
+    .phone__img {
+      margin: 0;
+      height: 415px;
+    }
+    .phone__info {
+      // width:
+      margin: 84px 0 0 50px;
+      .block1__item {
+        text-align: center;
+      }
+      span {
+        text-align: center;
+        margin-bottom: 20px;
+        width: 64%;
+        margin: 0 auto;
       }
     }
+  }
+    .svg-block-1 {
+        display: none;
+    }
+
+
+    .products {
+      padding: 0;
+      .products__box {
+        .product__desription {
+          .product__desr {
+            margin-bottom: 40px;
+          }
+          .product__desr--left {
+            padding-right: 20px;
+          }
+        }
+      }
+      .product__img {
+        margin-bottom: 20px;
+      }
+    }
+
+    .price {
+      .plans {
+        .plan__center {
+          position: relative;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+        .plan {
+          .plan__descr {
+            padding: 47px 6px 12px 0px;
+          }
+        }
+      }
+    }
+    .contacts {
+      height: auto;
+      padding-bottom: 20px;
+      .contacts__img {
+        .contacts__button {
+          p {
+            font-size: 32px;
+          }
+          a {
+            width: 122px;
+            font-size: 14px;
+          }
+        }
+      }
+      .contacts__form {
+        margin-left: 30px;
+        .contacts_address {
+          padding: 18px 0;
+          p {
+            font-size: 17px;
+          }
+        }
+          form {
+            .form__left {
+              width: 100%;
+              float: left;
+            }
+            .form__right {
+              float: left;
+              textarea {
+                width: 184px;
+              }
+            }
+            input[type="submit"] {
+              margin-right: 92px;
+            }
+          }
+      }
+    }
+    footer {
+      .flogo {
+          width: 30%;
+          float: left;
+      }
+      .fcopy {
+          width: 70%;
+          float: left;
+          .footer__copy {
+            margin: 45px 0 0 65px;
+          }
+      }
+      .footer__menu {
+        display: none;
+    }
+    .facebook {
+      display: none;
+    }
+  }
+  }
 }
