--- a/portfolio/weblab/style/style.css
+++ b/portfolio/weblab/style/style.css
@@ -727,17 +727,16 @@ h1 {
           font-size: 17px; }
       .container-fluid .contacts .contacts__form form .form__left {
         width: 97%;
-        float: left; }
+        float: none; }
       .container-fluid .contacts .contacts__form form .form__right {
-        width: 97%;
-        text-align: center;
-        padding: 0 17%;
-        float: left; }
+        width: 100%;
+        padding: 0 23%;
+        float: none; }
         .container-fluid .contacts .contacts__form form .form__right textarea {
           width: 185px; }
       .container-fluid .contacts .contacts__form form input[type="submit"] {
-        margin-top: 10px;
-        margin-right: 116px; }
+        float: none;
+        margin: 20px auto; }
   .container-fluid footer .flogo {
     width: 30%;
     float: left; }
