--- a/portfolio/weblab/style/style.css
+++ b/portfolio/weblab/style/style.css
@@ -730,7 +730,7 @@ h1 {
         float: none; }
       .container-fluid .contacts .contacts__form form .form__right {
         width: 100%;
-        padding: 0 23%;
+        padding: 0 78px;
         float: none; }
         .container-fluid .contacts .contacts__form form .form__right textarea {
           width: 185px; }
