--- a/portfolio/weblab/style/style.css
+++ b/portfolio/weblab/style/style.css
@@ -659,12 +659,14 @@ h1 {
 @media (min-width: 320px) and (max-width: 599px) {
   .container-fluid header .header__fixed {
     position: relative;
+    height: auto;
     background: none; }
     .container-fluid header .header__fixed .header__logo {
       position: absolute;
       top: -10px;
       left: -60px; }
     .container-fluid header .header__fixed .menu__link {
+      display: block;
       float: right;
       color: #fff;
       font-size: 13px;
